implement About, Items and Contact pages

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@
     --primary-color: #faad14;
     --warning-color: #fa541c;
     --background-color: #050606;
+    --text-color:#ecf0f1;
+    --primary-shadow-color: rgba( 250, 173, 20, 0.6 );
 }
